--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^0.8.5+3
   date_field: ^3.0.1
   awesome_notifications: ^0.6.21
+  flutter_barcode_scanner: ^2.0.0
 
 dev_dependencies:
   flutter_test:
