--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,9 @@ dependencies:
   date_field: ^3.0.1
   awesome_notifications: ^0.6.21
   flutter_barcode_scanner: ^2.0.0
-
+  flutter_localizations:
+    sdk: flutter 
+  provider: ^6.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -60,6 +62,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
